--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -3,7 +3,7 @@ body{
     background-color: #FFF4CE;
 }
 .full-container{
-    width: 95%;
+    width: 100%;
     padding-top: 5px;
     /* margin-left: 2%;
     margin-right: 2%; */
@@ -66,7 +66,7 @@ body{
   .slide {
     float: left;
     height: 300px;
-    width: 600px;
+    width: 1200px;
   }
    
   /* Add animation to the slides */
@@ -74,17 +74,17 @@ body{
      
   /* Calculate the total width on the
     basis of number of slides */
-    width: calc(600px * 4);
+    width: calc(1200px * 4);
    
   /* Specify the animation with the
     duration and speed */
     animation: slide 20s ease infinite;
   }
   .slide-image img{
-    width: 300px;
+    width: 600px;
   }
   .slide-text h{
-    width: 300px;
+    width: 600px;
   }
   .slide-show{
     display: flex;
@@ -119,15 +119,18 @@ body{
     }
    
     40% {
-      margin-left: calc(-600px * 1);
+      margin-left: calc(-1200px * 1);
+      
     }
    
     60% {
-      margin-left: calc(-600px * 2);
+      margin-left: calc(-1200px * 2);
+      
     }
    
     80% {
-      margin-left: calc(-600px * 3);
+      margin-left: calc(-1200px * 3);
+      
     }
   }
   .category{
@@ -187,3 +190,11 @@ body{
     font-size: larger;
     font-weight: bold;
   }
+
+  .footer {
+    padding: 5px; 
+    text-align: center; 
+    background: #FBD46E; 
+  }
+
+  
