--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -4,11 +4,12 @@ body{
 }
 .full-container{
     width: 100%;
-    padding-top: 5px;
+    /* padding-top: 5px; */
     /* margin-left: 2%;
     margin-right: 2%;  */
 }
 .menu{
+  /* position: absolute; */
     flex-grow: 1;
     padding: 0;
     display: flex;
@@ -58,6 +59,9 @@ body{
     overflow: hidden;
     width: 95%;
     margin: 0 auto;
+    margin-top: -23px;
+    border-radius: 5%;
+    
 
   }
    
@@ -65,7 +69,7 @@ body{
   with a fixed width and height */
   .slide {
     float: left;
-    height: 300px;
+    height: 500px;
     width: 1200px;
   }
    
@@ -197,4 +201,56 @@ body{
     background: #FBD46E; 
   }
 
-  
+  .uniPage_cover img{
+    margin-top: -23px;
+    padding-left: 25px;
+    width: 1200px;
+    border-radius: 5%;
+
+  }
+  .search_school{
+    overflow: hidden;
+    /* background-color: rgb(239, 239, 239); */
+    width: 1100px;
+    margin-left: 65px;
+    margin-top: 10px;
+    display: flex;
+  }
+
+  .search_school input[type=text] {
+    background-color: rgb(212, 208, 208);
+    float: left;
+    padding: 6px;
+    padding-right: 1100px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+  }
+  .uni_category{
+    width: 100%;
+    margin: 15px;
+    padding-left: 10px;
+  }
+
+  .uni_box{
+    display: inline-block;
+    padding-left: 10px;
+    width: 30%;
+  }
+
+  .inside-unibox{
+    /* height: 225px;
+    width: 225px; */
+    background-color: #FBD46E;
+    /* padding: 7px; */
+  }
+  .inside-unibox p{
+    font-family: 'Rubik',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    color: black;
+    padding: 30px;
+  }
+  .inside-unibox img{
+    /* padding-left: 50px; */
+    width: 100%;
+  }
