--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -60,7 +60,7 @@ body{
 }
 #slideshow {
     overflow: hidden;
-    width: 95%;
+    width: 94%;
     margin: 0 auto;
     margin-top: -23px;
     border-radius: 5%;
@@ -73,7 +73,7 @@ body{
   .slide {
     float: left;
     height: 500px;
-    width: 1200px;
+    width: 1180px;
   }
    
   /* Add animation to the slides */
@@ -81,17 +81,17 @@ body{
      
   /* Calculate the total width on the
     basis of number of slides */
-    width: calc(1200px * 4);
+    width: calc(1180px * 4);
    
   /* Specify the animation with the
     duration and speed */
     animation: slide 20s ease infinite;
   }
   .slide-image img{
-    width: 600px;
+    width: 590px;
   }
   .slide-text h{
-    width: 600px;
+    width: 590px;
   }
   .slide-show{
     display: flex;
@@ -126,17 +126,17 @@ body{
     }
    
     40% {
-      margin-left: calc(-1200px * 1);
+      margin-left: calc(-1180px * 1);
       
     }
    
     60% {
-      margin-left: calc(-1200px * 2);
+      margin-left: calc(-1180px * 2);
       
     }
    
     80% {
-      margin-left: calc(-1200px * 3);
+      margin-left: calc(-1180px * 3);
       
     }
   }
@@ -207,8 +207,7 @@ body{
   .uniPage_cover img{
     margin-top: -23px;
     padding-left: 25px;
-    width: 1200px;
-    border-radius: 5%;
+    width: 1180px;
 
   }
   .search_school{
@@ -256,4 +255,47 @@ body{
   .inside-unibox img{
     /* padding-left: 50px; */
     width: 100%;
+  }
+
+  .major_page_cover img{
+    width: 1180px;
+    padding-left: 25px;
+    margin-top: -15px;
+  }
+
+  .major_gallery{
+    width: 100%;
+    margin: 15px;
+    padding-left: 5px;
+  }
+
+  .gallery{
+    display: inline-block;
+    margin-top: 3px;
+    margin-right: 3px ;
+    width: 18%;
+    border-style: solid ;
+    border-color: #e4c617;
+    border-width: 1px;
+  }
+
+  .inside_gallery{
+    display: flex;
+    /* padding: 5px; */
+    /* height: 225px;
+    width: 225px; */
+    /* background-color: #FBD46E; */
+    /* border-color: #FBD46E; */
+    
+  }
+  .inside_gallery p{
+    font-family: 'Rubik',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    color: black;
+    padding-left: 5px;
+
+  }
+  .inside_gallery img{
+    padding-left: 3px;
+    padding-top: 3px;
+    width: 55px;
   }
