--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -244,17 +244,21 @@ body{
   .inside-unibox{
     /* height: 225px;
     width: 225px; */
-    background-color: #FBD46E;
+    background-color: #FFF4CE;
     /* padding: 7px; */
   }
   .inside-unibox p{
     font-family: 'Rubik',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
     color: black;
-    padding: 30px;
+    padding: 13px;
+    font-size: large;
   }
   .inside-unibox img{
     /* padding-left: 50px; */
     width: 100%;
+  }
+  .inside-unibox a{
+    text-decoration: none;
   }
 
   .major_page_cover img{
