--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -1,54 +1,63 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 body{
-    background-color: #FFF4CE;
+    background-color: white;
 }
 .full-container{
+  
+  overflow: hidden;
     width: 100%;
     /* padding-top: 5px; */
-    /* margin-left: 2%;
+    /* margin-left: 1%;
     margin-right: 2%;  */
 }
 .main_content{
-  padding: 20px;
+  padding: 28px;
 }
 .menu{
-  /* position: absolute; */
-    flex-grow: 1;
-    padding: 0;
+  background-color: #23384e;
+  height: 46px;
+    padding: 5px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 99;
     display: flex;
 }
 .logo img{
-    margin-top: -20px;
-    width: 90px;
+    margin-top: -35px;
+    width: 200px;
+    
 }
 .main-menu ul li{
     list-style: none;
-    padding-left: 20px;
+    padding-left: 15px;
     display: inline;
     align-items: center;
 }
 .main-menu ul li a{
   font-family: 'Rubik', sans-serif;
     text-decoration: none;
-    color: black;
+    color: white;
 }
 .main-menu ul li a:hover{
-    color: #e4c617;
+    color: #26BD99;
 }
 .register{
-    padding-left: 530px;
+    padding-left: 470px;
     display: inline-flex;
 }
 .login{
     margin-bottom: auto;
     padding: 5px;
-    background-color: #FBD46E;
+    background-color: #26BD99;
 }
 .signup{
     margin-bottom: auto;
     margin-left: 5px;
     padding: 5px;
-    background-color: #FBD46E;
+    background-color: #26BD99;
 }
 .login a{
   font-family: 'Rubik', sans-serif;
@@ -62,10 +71,8 @@ body{
     overflow: hidden;
     width: 94%;
     margin: 0 auto;
-    margin-top: -23px;
-    border-radius: 5%;
-    
-
+    margin-top: 45px;
+    /* border-radius: 5%; */
   }
    
   /* Style each of the sides
@@ -100,19 +107,19 @@ body{
   /* Set the background color
   of each of the slides */
   .slide:nth-child(1) {
-    background: #FBD46E;
+    background: #26BD99;
   }
    
   .slide:nth-child(2) {
-    background: #FBD46E;
+    background: #26BD99;
   }
    
   .slide:nth-child(3) {
-    background: #FBD46E;
+    background: #26BD99;
   }
    
   .slide:nth-child(4) {
-    background: #FBD46E;
+    background: #26BD99;
   }
    
   /* Define the animation
@@ -153,7 +160,7 @@ body{
   .inside-box{
     height: 200px;
     width: 200px;
-    background-color: #FBD46E;
+    background-color: #26BD99;
     padding: 7px;
   }
   .inside-box p{
@@ -164,7 +171,7 @@ body{
     padding-left: 50px;
     width: 110px;
   }
-  .join{
+  /* .join{
     font-family: 'Rubik', sans-serif;
     margin-top: -50px;
     color: #e4c617;
@@ -202,12 +209,28 @@ body{
     padding: 5px; 
     text-align: center; 
     background: #FBD46E; 
-  }
+  } */
 
   .uniPage_cover img{
-    margin-top: -23px;
-    padding-left: 25px;
+    /* padding-left: 25px; */
     width: 1180px;
+    /* margin-top: 45px; */
+  }
+  .uniPage_cover{
+    width: 1180px;
+    position: relative;
+    margin-top: 45px;
+    padding-left: 25px;
+  }
+  .uniPage_cover p{
+    font-size: xx-large;
+    color: white;
+    position: absolute;
+    top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); */
 
   }
   .search_school{
@@ -244,12 +267,12 @@ body{
   .inside-unibox{
     /* height: 225px;
     width: 225px; */
-    background-color: #FFF4CE;
+    background-color: #26BD99;
     /* padding: 7px; */
   }
   .inside-unibox p{
     font-family: 'Rubik',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-    color: black;
+    color: white;
     padding: 13px;
     font-size: large;
   }
@@ -279,7 +302,7 @@ body{
     margin-right: 3px ;
     width: 18%;
     border-style: solid ;
-    border-color: #e4c617;
+    border-color: #26BD99;
     border-width: 1px;
   }
 
@@ -606,3 +629,122 @@ body{
   .contact i:hover{
     color: white;
   }
+
+  .uni-name h{
+    font-size: 50px;
+  }
+
+  .uni_content_left{
+    width: 55%;
+  }
+  .uni_content_right{
+    padding-left: 30px;
+    width: 30%;
+  }
+  .full_content{
+    width: 100%;
+    display: flex;
+  }
+
+  [data-tab-info] {
+    display: none;
+}
+  
+.active[data-tab-info] {
+    display: block;
+}
+  
+.tab-content {
+    font-size: 15px;
+    font-family: sans-serif;
+    /* font-weight: bold; */
+}
+  
+.tabs {
+    font-size: 20px;
+    /* color: rgb(255, 255, 255); */
+    display: flex;
+    margin: 0;
+}
+  
+.tabs span {
+    /* background: rgb(28, 145, 38); */
+    padding: 20px;
+    /* border: 1px solid #23384e */
+}
+  
+.tabs span:hover {
+    background: rgb(224, 228, 226);
+    cursor: pointer;
+    color: #26BD99;
+}
+.cadt_uni_cover img{
+  width: 1180px;
+}
+.uni_container{
+  width: 90%;
+  margin-left: 33px;
+  margin-right: 30px;
+}
+.vision_mission{
+  width: 100%;
+  display: flex;
+}
+.vision{
+  width: 50%;
+  padding: 10px;
+}
+.mission{
+  width: 50%;
+  padding: 10px;
+}
+.mission ul{
+  margin-left: -25px;
+}
+.school_enviroment h{
+  font-size: medium;
+  font-weight: bold;
+}
+.inside_photo {
+  padding: 10px;
+  width: 100%;
+}
+.inside_photo img{
+  width: 200px;
+}
+.activity h{
+  font-size: larger;
+  font-weight: bold;
+  
+}
+.activity_category{
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 570px;
+  background-color: #23384e;
+  width: 100%;
+  display: flex;
+}
+.inside-activity{
+  padding: 10px;
+}
+.inside-activity a{
+  text-decoration: none;
+  color: white;
+}
+.fee-list{
+  width: 100%;
+  display: inline-block;
+}
+.fee-list ul li{
+  padding-right: 30px;
+  display: inline;
+
+}
+.scholarship p{
+  font-size: larger;
+  font-weight: bold;
+}
+.scholarship img{
+  width: 600px;
+}
