--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -277,8 +277,9 @@ body{
     font-size: large;
   }
   .inside-unibox img{
-    /* padding-left: 50px; */
     width: 100%;
+    /* padding-left: 50px; */
+    /* width: 100%; */
   }
   .inside-unibox a{
     text-decoration: none;
@@ -634,16 +635,25 @@ body{
     font-size: 50px;
   }
 
-  .uni_content_left{
-    width: 55%;
+  /* .uni_content_left{
+    width: 100%;
   }
-  .uni_content_right{
-    padding-left: 30px;
-    width: 30%;
+  .shool_info{
+    width: 100%;
+  } */
+  .shool_info ul li{
+    list-style: none;
+    display: inline-block;
+    padding-right: 12px;
+    /* padding-left: 10px; */
+  }
+  .shool_info ul li img{
+    margin-left: -40px;
+    width: 280px;
   }
   .full_content{
     width: 100%;
-    display: flex;
+    /* display: flex; */
   }
 
   [data-tab-info] {
@@ -682,7 +692,7 @@ body{
   width: 1180px;
 }
 .uni_container{
-  width: 90%;
+  width: 100%;
   margin-left: 33px;
   margin-right: 30px;
 }
@@ -732,13 +742,22 @@ body{
   text-decoration: none;
   color: white;
 }
-.fee-list{
-  width: 100%;
-  display: inline-block;
+.fees{
+
+  
+  /* padding-left: -20px; */
+  display: flex;
 }
+/* .fee-list{
+
+  padding: 10px;
+} */
 .fee-list ul li{
-  padding-right: 30px;
-  display: inline;
+  width: auto;
+  margin-right: 10px;
+  padding-bottom: 10px;
+  /* display: inline; */
+  list-style: none;
 
 }
 .scholarship p{
