--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -67,86 +67,71 @@ body{
   font-family: 'Rubik', sans-serif;
     text-decoration: none;
 }
-#slideshow {
-    overflow: hidden;
-    width: 94%;
-    margin: 0 auto;
-    margin-top: 45px;
-    /* border-radius: 5%; */
-  }
-   
-  /* Style each of the sides
-  with a fixed width and height */
-  .slide {
-    float: left;
-    height: 500px;
-    width: 1180px;
-  }
-   
-  /* Add animation to the slides */
-  .slide-wrapper {
-     
-  /* Calculate the total width on the
-    basis of number of slides */
-    width: calc(1180px * 4);
-   
-  /* Specify the animation with the
-    duration and speed */
-    animation: slide 20s ease infinite;
-  }
-  .slide-image img{
-    width: 590px;
-  }
-  .slide-text h{
-    width: 590px;
-  }
-  .slide-show{
-    display: flex;
-  }
-   
-  /* Set the background color
-  of each of the slides */
-  .slide:nth-child(1) {
-    background: #26BD99;
-  }
-   
-  .slide:nth-child(2) {
-    background: #26BD99;
-  }
-   
-  .slide:nth-child(3) {
-    background: #26BD99;
-  }
-   
-  .slide:nth-child(4) {
-    background: #26BD99;
-  }
-   
-  /* Define the animation
-  for the slideshow */
-  @keyframes slide {
-     
-  /* Calculate the margin-left for
-    each of the slides */
-    20% {
-      margin-left: 0px;
-    }
-   
-    40% {
-      margin-left: calc(-1180px * 1);
-      
-    }
-   
-    60% {
-      margin-left: calc(-1180px * 2);
-      
-    }
-   
-    80% {
-      margin-left: calc(-1180px * 3);
-      
-    }
-  }
+.mySlides{
+    display: none;
+    margin-top: 50px;
+}
+
+img{
+    vertical-align: middle;
+}
+/* Slideshow container */
+.slideshow-container{
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+/* .text{
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+} */
+
+/* Number text (1/3 etc) */
+.numbertext{
+  color: black;
+  font-size: 20px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot{
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active{
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade{
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px){
+  .text {font-size: 11px}
+}
   .category{
     display: flex;
   }
