--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -30,6 +30,9 @@ body{
     width: 200px;
     
 }
+.main-menu{
+  flex:1;
+}
 .main-menu ul li{
     list-style: none;
     padding-left: 15px;
@@ -45,31 +48,38 @@ body{
     color: #26BD99;
 }
 .register{
-    padding-left: 470px;
-    display: inline-flex;
+    width: 300px;
+    display: flex;
+    align-items: center;
+}
+.current-time{
+  width: 100px;
 }
 .current-time h9{
   color: white;
 }
-.login{
-    margin-bottom: auto;
-    padding: 5px;
-    background-color: #26BD99;
+.user{
+  width: 250px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
-.signup{
-    margin-bottom: auto;
-    margin-left: 5px;
-    padding: 5px;
-    background-color: #26BD99;
+.button1, .button2{
+  height: 80%;
+  width: 80px;
 }
-.login a{
-  font-family: 'Rubik', sans-serif;
-    text-decoration: none;
+
+.login, .signup{
+  font-size: 15px;
+  font-weight: 600;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  cursor: pointer;
+  
 }
-.signup a{
-  font-family: 'Rubik', sans-serif;
-    text-decoration: none;
-}
+
 .mySlides{
     display: none;
     margin-top: 50px;
@@ -85,18 +95,6 @@ img{
   margin: auto;
 }
 
-/* Caption text */
-/* .text{
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-} */
-
-/* Number text (1/3 etc) */
 .numbertext{
   color: black;
   font-size: 20px;
@@ -135,6 +133,165 @@ img{
 @media only screen and (max-width: 300px){
   .text {font-size: 11px}
 }
+
+.content-aboutus-img-text p {
+  font-size: 25px;
+  width: 700px;
+  position: absolute;
+  left: 50%;
+  bottom: 30%;
+}
+.content-aboutus{
+  height:450px;
+  background-color: lightcyan;
+  position: relative;
+  margin-top: 10px;
+}
+.content-aboutus h4{
+  position: absolute;
+  left: 20%;
+  text-decoration: underline;
+  font-size: 33px;
+  margin: 0;
+  top: 5%;
+}
+.content-aboutus-img{
+  height: 50%;
+  width: 40%;
+}
+.content-aboutus-img img{
+  width: 80%;
+  left: 30%;
+  margin-left: 45%;
+}
+.how-it-works{
+  height: 400px;
+  background-color: lightpink;
+  position: relative;
+
+}
+.how-it-works h1{
+  position: absolute;
+  left: 20%;
+  text-decoration: underline;
+}
+.how-it-works-p1{
+  display: flex;
+  align-items: center;
+  height: 100px;
+  position: absolute;
+  left: 23%;
+  top: 20%;
+}
+.how-it-works-p2{
+  display: flex;
+  align-items: center;
+  height: 100px;
+  position: absolute;
+  left: 30%;
+  top: 45%;
+}
+.how-it-works-p3{
+  display: flex;
+  align-items: center;
+  height: 100px;
+  position: absolute;
+  left: 38%;
+  bottom: 2%;
+}
+.number button{
+  font-size: 50px;
+  border-radius: 50%;
+}
+.text p{
+  font-size: 25px;
+  padding-left: 20px;
+}
+.sponsorship{
+  height: 200px;
+  background-color: rgb(218, 209, 209);
+  border-bottom: 2px solid black;
+}
+.sponsorship h2{
+  margin: 0;
+  font-size: 40px;
+  padding-top: 10px;
+  padding-left: 610px;
+}
+.sponsorship-partner{
+  display:flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 10px;
+}
+.asean{
+  width: 180px;
+}
+.moeys{
+  width: 150px;
+}
+.cadt{
+  width: 120px;
+}
+.mptc{
+  width: 100px;
+}
+.usaid{
+  width: 100px;
+}
+.below-content{
+  background-color: rgb(218, 209, 209);
+  position: relative;
+  height: 200px;
+}
+/* .below-content-logo-img{
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+} */
+.below-content-logo-img-pic{
+  width: 160px;
+  
+}
+.contact{
+  position: absolute;
+  bottom:5px;
+  right: 0;
+}
+.address p{
+  position: absolute;
+  right:0;
+  top:0;
+}
+.googlemap:hover{
+  color: white;
+}
+.policy{
+display: inline-block;
+position: absolute;
+bottom: 20px;
+left: 10px;
+}
+.policy p{
+  margin: 0;
+  cursor: pointer;
+}
+.policy p:hover{
+  color: white;   
+  }
+.contact i{
+  margin-right: 6px;
+  cursor: pointer;
+}
+.contact i:hover{
+  color: white;
+} 
+.address a{
+  text-decoration: none;
+}
+
   .category{
     display: flex;
   }
@@ -315,309 +472,8 @@ img{
     padding-top: 3px;
     width: 55px;
   }
-  .content-aboutus-img-text p {
-    font-size: 25px;
-    width: 700px;
-    position: absolute;
-    left: 50%;
-    bottom: 30%;
-  }
-  .content-aboutus{
-    height:450px;
-    background-color: lightcyan;
-    position: relative;
-    margin-top: 10px;
-  }
-  .content-aboutus h4{
-    position: absolute;
-    left: 20%;
-    text-decoration: underline;
-    font-size: 33px;
-    margin: 0;
-    top: 5%;
-  }
-  .content-aboutus-img{
-    height: 50%;
-    width: 40%;
-  }
-  .content-aboutus-img img{
-    width: 80%;
-    left: 30%;
-    margin-left: 45%;
-  }
-  .how-it-works{
-    height: 400px;
-    background-color: lightpink;
-    position: relative;
   
-  }
-  .how-it-works h1{
-    position: absolute;
-    left: 20%;
-    text-decoration: underline;
-  }
-  .how-it-works-p1{
-    display: flex;
-    align-items: center;
-    height: 100px;
-    position: absolute;
-    left: 23%;
-    top: 20%;
-  }
-  .how-it-works-p2{
-    display: flex;
-    align-items: center;
-    height: 100px;
-    position: absolute;
-    left: 30%;
-    top: 45%;
-  }
-  .how-it-works-p3{
-    display: flex;
-    align-items: center;
-    height: 100px;
-    position: absolute;
-    left: 38%;
-    bottom: 2%;
-  }
-  .number button{
-    font-size: 50px;
-    border-radius: 50%;
-  }
-  .text p{
-    font-size: 25px;
-    padding-left: 20px;
-  }
-  .sponsorship{
-    height: 200px;
-    background-color: lightgray;
-  }
-  .sponsorship h2{
-    margin: 0;
-    font-size: 40px;
-    padding-top: 10px;
-    padding-left: 610px;
-  }
-  .sponsorship-partner{
-    display:flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding-top: 10px;
-  }
-  .asean{
-    width: 180px;
-  }
-  .moeys{
-    width: 150px;
-  }
-  .cadt{
-    width: 120px;
-  }
-  .mptc{
-    width: 100px;
-  }
-  .usaid{
-    width: 100px;
-  }
-  .below-content{
-    background-color: lightblue;
-    position: relative;
-    height: 200px;
-  }
-  .below-content-logo{
-    display: flex;
-    align-items: center;
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-  .below-content-logo-img-pic{
-    width: 100px;
-  }
-  .contact{
-    position: absolute;
-    bottom:5px;
-    right: 0;
-  }
-  .address p{
-    position: absolute;
-    right:0;
-    top:0;
-  }
-  .googlemap:hover{
-    color: white;
-  }
-  .policy{
-  display: inline-block;
-  position: absolute;
-  bottom: 20px;
-  left: 10px;
-  }
-  .policy p{
-    margin: 0;
-    cursor: pointer;
-  }
-  .policy p:hover{
-    color: white;   
-    }
-  .contact i{
-    margin-right: 6px;
-    cursor: pointer;
-  }
-  .contact i:hover{
-    color: white;
-  }
-  .content-aboutus-img-text p {
-    font-size: 25px;
-    width: 700px;
-    position: absolute;
-    left: 50%;
-    bottom: 30%;
-  }
-  .content-aboutus{
-    height:450px;
-    background-color: lightcyan;
-    position: relative;
-  }
-  .content-aboutus h4{
-    position: absolute;
-    left: 20%;
-    text-decoration: underline;
-    font-size: 33px;
-    margin: 0;
-    top: 5%;
-  }
-  .content-aboutus-img{
-    height: 50%;
-    width: 40%;
-  }
-  .content-aboutus-img img{
-    width: 80%;
-    left: 30%;
-    margin-left: 45%;
-  }
-  .how-it-works{
-    height: 400px;
-    background-color: lightpink;
-    position: relative;
-  
-  }
-  .how-it-works h1{
-    position: absolute;
-    left: 20%;
-    text-decoration: underline;
-  }
-  .how-it-works-p1{
-    display: flex;
-    align-items: center;
-    height: 100px;
-    position: absolute;
-    left: 23%;
-    top: 20%;
-  }
-  .how-it-works-p2{
-    display: flex;
-    align-items: center;
-    height: 100px;
-    position: absolute;
-    left: 30%;
-    top: 45%;
-  }
-  .how-it-works-p3{
-    display: flex;
-    align-items: center;
-    height: 100px;
-    position: absolute;
-    left: 38%;
-    bottom: 2%;
-  }
-  .number button{
-    font-size: 50px;
-    border-radius: 50%;
-  }
-  .text p{
-    font-size: 25px;
-    padding-left: 20px;
-  }
-  .sponsorship{
-    height: 200px;
-    background-color: lightgray;
-  }
-  .sponsorship h2{
-    margin: 0;
-    font-size: 40px;
-    padding-top: 10px;
-    padding-left: 610px;
-  }
-  .sponsorship-partner{
-    display:flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding-top: 10px;
-  }
-  .asean{
-    width: 180px;
-  }
-  .moeys{
-    width: 150px;
-  }
-  .cadt{
-    width: 120px;
-  }
-  .mptc{
-    width: 100px;
-  }
-  .usaid{
-    width: 100px;
-  }
-  .below-content{
-    background-color: lightblue;
-    position: relative;
-    height: 200px;
-  }
-  .below-content-logo{
-    display: flex;
-    align-items: center;
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-  .below-content-logo-img-pic{
-    width: 100px;
-  }
-  .contact{
-    position: absolute;
-    bottom:5px;
-    right: 0;
-  }
-  .address p{
-    position: absolute;
-    right:0;
-    top:0;
-  }
-  .googlemap:hover{
-    color: white;
-  }
-  .policy{
-  display: inline-block;
-  position: absolute;
-  bottom: 20px;
-  left: 10px;
-  }
-  .policy p{
-    margin: 0;
-    cursor: pointer;
-  }
-  .policy p:hover{
-    color: white;   
-    }
-  .contact i{
-    margin-right: 6px;
-    cursor: pointer;
-  }
-  .contact i:hover{
-    color: white;
-  }
+
 
   .uni-name h{
     font-size: 50px;
