--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -273,7 +273,8 @@ body{
   .inside-unibox p{
     font-family: 'Rubik',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
     color: white;
-    padding: 13px;
+    text-align: center;
+    /* padding: 13px; */
     font-size: large;
   }
   .inside-unibox img{
@@ -641,13 +642,13 @@ body{
   .shool_info{
     width: 100%;
   } */
-  .shool_info ul li{
+  .w3-animate-left ul li{
     list-style: none;
     display: inline-block;
     padding-right: 12px;
     /* padding-left: 10px; */
   }
-  .shool_info ul li img{
+  .w3-animate-lef ul li img{
     margin-left: -40px;
     width: 280px;
   }
@@ -663,6 +664,7 @@ body{
 .active[data-tab-info] {
     display: block;
 }
+
   
 .tab-content {
     font-size: 15px;
@@ -688,6 +690,7 @@ body{
     cursor: pointer;
     color: #26BD99;
 }
+
 .cadt_uni_cover img{
   width: 1180px;
 }
