--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -291,7 +291,147 @@ left: 10px;
 .address a{
   text-decoration: none;
 }
+.content{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.content-head{
+  display: flex;
+  align-items: center;
+}
+.head-logo{
+  width: 300px;
+  margin-bottom: -100px;
+  margin-top: -50px;
+}
+.logo5{
+  width: 100%;
+  height: 100%;
+}
+
+.head-text p{
+  font-size: 30px;
+}
+
+.content-box{
+  height: 600px;
+  width: 600px;
+  position: relative;
+  background-color: white;
+  border: 3px solid lightgray;
+  border-radius: 10px;
+}
+
+.container-body{
+  padding:32px;
+  height: 550px;
+}
+
+
+.content-body-name{
+  height: 100px;
+}
+
+.content-body-name h1{
+  margin: 0;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.body-bottom-border{ 
+  border-bottom: 3px solid blue;
+  position: absolute;
+  left: 25%;
+  right: 25%;
+}
+
+.body-informationfill{
+  font-weight: 600;
+  font-size: 20px;
+  padding-left: 50px; 
+}
+
+.text1{
+    font-size: 25px;
+    color: gray;
+    text-align: center;
+}
+.star{
+  color:red;
+}
+
+.fill-box{
+  display: flex; 
+  border: 2px solid rgb(240, 238, 238);
+  width: 450px;
+  border-radius: 10px;
+}
+
+.Cam-pic{
+  width: 40px;  
+  padding-top: 15px;
+}
+
+.fill-text{
+  padding-left: 20px;
+  flex:1;
+}
+
+.text-button, .typebuttonpw{
+  width: 95%;
+  height: 60px;
+  font-size: 23px;
+  border: none;
+  outline: none;
+}
+
+.text-button::placeholder{
+  font-size: 23px;
+  padding-left: 10px;
+}
+
+.typebutton{
+  padding-left: 10px;
+}
+
+.button-login{
+  color: white;
+  font-size: 20px;
+  height: 50px;
+  width: 455px;
+  margin-left: 50px;
+  background-color: rgb(0, 91, 234);
+  border-radius: 100px;
+  cursor: pointer;
+  transition: margin-right 0.15s, margin-top 0.15s;
+}
+
+.button-login:hover{
+  margin-right: -2px;
+  margin-top: -2px;
+}
+
+.Below{
+  font-size: 20px;
+  text-align: center;
+}
+
+.create{
+  color: rgb(0, 91, 234);
+  cursor: pointer;
+}
+
+.create:hover{
+  margin-left:5px;
+  margin-top: 5px;
+} 
+
+.Policy{
+  text-align: center;
+}
   .category{
     display: flex;
   }
