--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -65,6 +65,11 @@ body{
   align-items: center;
   justify-content: space-evenly;
 }
+
+.user a{
+  text-decoration: none;
+}
+
 .button1, .button2{
   height: 80%;
   width: 80px;
