--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -374,17 +374,27 @@ left: 10px;
     top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.5); */
 
   }
   .search_school{
     overflow: hidden;
     /* background-color: rgb(239, 239, 239); */
-    width: 1100px;
-    margin-left: 65px;
+    width: 1190px;
+    margin-left: 20px;
     margin-top: 10px;
     display: flex;
+  }
+  .public_uni h{
+    font-weight: bold;
+    font-size: large;
+    padding: 30px;
+    
+  }
+  .private_uni h{
+    font-weight: bold;
+    font-size: large;
+    padding: 30px;
+
   }
 
   .search_school input[type=text] {
@@ -462,7 +472,7 @@ left: 10px;
     /* border-color: #FBD46E; */
     
   }
-  .inside_gallery p{
+  /* .inside_gallery p{
     font-family: 'Rubik',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
     color: black;
     padding-left: 5px;
@@ -473,8 +483,74 @@ left: 10px;
     padding-top: 3px;
     width: 55px;
   }
-  
+   */
 
+   /* Popup container */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+  visibility: hidden;
+  width: 500px;
+  background-color: #555;
+  color: #fff;
+  /* text-align: center; */
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 0%;
+  left: 100%;
+  margin-left: -50px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after{
+  content: "";
+  position: absolute;
+  top: 10%;
+  left: 100%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+
+  to {
+      opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+
+  to {
+      opacity: 1;
+  }
+}
 
   .uni-name h{
     font-size: 50px;
