--- a/scholarship-project/style.css
+++ b/scholarship-project/style.css
@@ -53,14 +53,10 @@ body{
     align-items: center;
 }
 .current-time{
-  width: 110px;
+  width: 100px;
 }
 .current-time h9{
   color: white;
-  cursor: pointer;
-}
-.current-time h9:hover{
-  color: #26BD99;
 }
 .user{
   width: 250px;
@@ -69,11 +65,6 @@ body{
   align-items: center;
   justify-content: space-evenly;
 }
-
-.user a{
-  text-decoration: none;
-}
-
 .button1, .button2{
   height: 80%;
   width: 80px;
@@ -86,21 +77,7 @@ body{
   height: 100%;
   border-radius: 50px;
   cursor: pointer;
-}
-
-.part1, .part2{
-  height:90%;
-  width: 40px;
-}
-.notify, .user-pf{
-
-  border-radius: 100px;;
-  cursor: pointer;
-  height: 100%;
-}
-
-.user-pf:hover, .notify:hover{
-  background-color: #26BD99;
+  
 }
 
 .mySlides{
@@ -166,19 +143,17 @@ img{
 }
 .content-aboutus{
   height:450px;
+  background-color: lightcyan;
   position: relative;
   margin-top: 10px;
 }
 .content-aboutus h4{
   position: absolute;
   left: 20%;
+  text-decoration: underline;
   font-size: 33px;
   margin: 0;
   top: 5%;
-  cursor: pointer;
-}
-.content-aboutus h4:hover{
-  text-decoration: underline;
 }
 .content-aboutus-img{
   height: 50%;
@@ -191,16 +166,13 @@ img{
 }
 .how-it-works{
   height: 400px;
+  background-color: lightpink;
   position: relative;
 
 }
 .how-it-works h1{
   position: absolute;
   left: 20%;
-  cursor: pointer;
-}
-
-.how-it-works h1:hover{
   text-decoration: underline;
 }
 .how-it-works-p1{
@@ -238,18 +210,13 @@ img{
 .sponsorship{
   height: 200px;
   background-color: rgb(218, 209, 209);
+  border-bottom: 2px solid black;
 }
 .sponsorship h2{
   margin: 0;
   font-size: 40px;
   padding-top: 10px;
   padding-left: 610px;
-  cursor: pointer;
-}
-
-.sponsorship h2:hover{
-  text-decoration: underline;
-  text-decoration-thickness: 3px;
 }
 .sponsorship-partner{
   display:flex;
@@ -259,8 +226,6 @@ img{
 }
 .asean{
   width: 180px;
-  margin-right: -90px;
-  margin-left: -30px;
 }
 .moeys{
   width: 150px;
@@ -273,13 +238,6 @@ img{
 }
 .usaid{
   width: 100px;
-  margin-left: -20px;
-}
-.body-bottom-content-border{
-  border-bottom: 3px solid rgb(155, 148, 148);
-  position: absolute;
-  left: 31%;
-  right: 30%;
 }
 .below-content{
   background-color: rgb(218, 209, 209);
@@ -293,13 +251,9 @@ img{
   left: 0;
   top: 0;
 } */
-.below-content-logo-img{
-  position: absolute;
-  top: -10%;
-
-}
 .below-content-logo-img-pic{
-  width: 200px;
+  width: 160px;
+  
 }
 .contact{
   position: absolute;
@@ -337,173 +291,6 @@ left: 10px;
 .address a{
   text-decoration: none;
 }
-.content{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.content-head{
-  display: flex;
-  align-items: center;
-}
-.head-logo{
-  width: 300px;
-  margin-bottom: -100px;
-  margin-top: -120px;
-}
-.logo5{
-  width: 100%;
-  height: 100%;
-}
-
-.head-text p{
-  font-size: 30px;
-}
-
-.content-box{
-  height: 600px;
-  width: 600px;
-  position: relative;
-  background-color: white;
-  border: 3px solid lightgray;
-  border-radius: 10px;
-}
-
-.container-body{
-  padding:32px;
-  height: 550px;
-}
-
-
-.content-body-name{
-  height: 100px;
-}
-
-.content-body-name h1{
-  margin: 0;
-  font-size: 50px;
-  text-align: center;
-  padding-top: 20px;
-}
-
-.body-bottom-border{ 
-  border-bottom: 2px solid blue;
-  position: absolute;
-  left: 25%;
-  right: 25%;
-}
-.body-bottom-border-signup{
-  border: 1px solid blue;
-  position: absolute;
-  left: 40%;
-  right: 40%;
-}
-.Log-in a{
-  text-decoration: none;
-}
-.Log-in a:hover{
-  text-decoration: underline;
-}
-
-.body-informationfill{
-  font-weight: 600;
-  font-size: 20px;
-  padding-left: 50px; 
-}
-
-.text1{
-    font-size: 25px;
-    color: gray;
-    text-align: center;
-}
-.star{
-  color:red;
-}
-
-.fill-box{
-  display: flex; 
-  border: 2px solid rgb(240, 238, 238);
-  width: 450px;
-  border-radius: 10px;
-}
-
-.Cam-pic{
-  width: 40px;  
-  padding-top: 15px;
-}
-
-.fill-text{
-  padding-left: 20px;
-  flex:1;
-}
-
-.text-button, .typebuttonpw{
-  width: 95%;
-  height: 60px;
-  font-size: 23px;
-  border: none;
-  outline: none;
-}
-
-.text-button::placeholder{
-  font-size: 23px;
-  padding-left: 10px;
-}
-
-.typebutton{
-  padding-left: 10px;
-}
-
-.button-login{
-  color: white;
-  font-size: 20px;
-  height: 50px;
-  width: 455px;
-  margin-left: 50px;
-  background-color: rgb(0, 91, 234);
-  border-radius: 100px;
-  cursor: pointer;
-  transition: margin-right 0.15s, margin-top 0.15s;
-}
-
-
-
-.Below{
-  font-size: 20px;
-  text-align: center;
-}
-
-.create a{
-  color: rgb(0, 91, 234);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.create a:hover{
-  text-decoration: underline;
-}
-.content-box-signup{
-  height: 1050px;
-  border: 2px solid lightgray;
-
-}
-
-
-
-.Policy{
-  text-align: center;
-}
-
-.forgot-pw a {
-  text-decoration: none;
-}
-.forgot-pw a:hover {
-  text-decoration: underline;
-}
-
-
-
 
   .category{
     display: flex;
